<resources>
    <string name="app_name">Planner</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_information">About</string>
    <string name="title_details">Details</string>
    <string name="created_by">Created by</string>
    <string name="contact_information">Contact Information</string>
    <string name="add_new_task">Add new task</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="ok">OK</string>
    <string name="calendar">Calendar</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_task">New Task</string>
    <string name="task_name">Name of task</string>
    <string name="task_note">Add note to the task</string>
    <string name="task_details">Task Details</string>
    <string name="make_task_regular">Make task regular</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="signup_new_user">Sign up new user</string>
    <string name="username">Username</string>
    <string name="new_user">New user</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="user_exists">User already exists</string>
    <string name="confirm_password">Confirm password</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="created">Created:</string>
    <string name="deadline">Deadline:</string>
</resources>