<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/editTask"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"
        app:iconTint="@color/button_image_selector"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deleteTask"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        app:iconTint="@color/button_image_selector"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/submitTask"
        android:enabled="true"
        android:icon="@drawable/ic_outline_check_24"
        android:title="@string/submit"
        app:iconTint="@color/button_image_selector"
        app:showAsAction="ifRoom" />
</menu>