<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="authViewModel"
            type="com.gmail.sofiapatiy.ui.auth.AuthViewModel" />

        <variable
            name="presenter"
            type="com.gmail.sofiapatiy.ui.auth.AuthFragment.AuthPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:alpha="0.3"
            android:contentDescription="@null"
            android:src="@drawable/ic_dashboard_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_version"
            app:tint="?colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userlogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={authViewModel.userLogin}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={authViewModel.userPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:enabled="@{authViewModel.isLoginEnabled()}"
            android:onClick="@{(v) -> presenter.onClickLogin()}"
            android:text="@string/login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{(v) -> presenter.onClickSignup()}"
            android:text="@string/signup_new_user" />
    </LinearLayout>
</layout>