<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="taskViewModel"
            type="com.gmail.sofiapatiy.ui.home.taskdetails.TaskDetailsViewModel" />

        <variable
            name="presenter"
            type="com.gmail.sofiapatiy.ui.home.taskdetails.TaskDetailsFragment.TaskDetailsPresenter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:isTaskOkToSubmit="@{taskViewModel.isTaskOkToSubmit()}"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:menu="@menu/menu_task_details"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:onMenuItemClick="@{ (m) -> presenter.onActionItemClicked(m)}"
                app:onNavigationClick="@{(v) -> presenter.onNavigateBack()}"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:taskDetailsMenuState="@{taskViewModel.taskUiState}"
                app:title="@string/task_details" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingBottom="?actionBarSize"
                app:enableDisable="@{taskViewModel.isTaskDetailsEnabled()}">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/task_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={taskViewModel.taskName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField_note"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/task_note">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={taskViewModel.taskDescription}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.gmail.sofiapatiy.ui.view.DateTimeSelector
                    android:id="@+id/completionPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dateTimeSelectorLabel="Completion"
                    app:onDateSelect="@{(v) -> presenter.onCompletionDateSelect()}"
                    app:onTimeSelect="@{(v) -> presenter.onCompletionTimeSelect()}"
                    app:selectedFormattedDate="@{taskViewModel.completionDateTime}"
                    app:selectedFormattedTime="@{taskViewModel.completionDateTime}" />

                <com.gmail.sofiapatiy.ui.view.DateTimeSelector
                    android:id="@+id/deadlinePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dateTimeSelectorLabel="Deadline"
                    app:onDateSelect="@{(v) -> presenter.onDeadlineDateSelect()}"
                    app:onTimeSelect="@{(v) -> presenter.onDeadlineTimeSelect()}"
                    app:selectedFormattedDate="@{taskViewModel.deadlineDateTime}"
                    app:selectedFormattedTime="@{taskViewModel.deadlineDateTime}" />

                <com.gmail.sofiapatiy.ui.view.DateTimeSelector
                    android:id="@+id/reminderPicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dateTimeSelectorLabel="Reminder"
                    app:onDateSelect="@{(v) -> presenter.onReminderDateSelect()}"
                    app:onTimeSelect="@{(v) -> presenter.onReminderTimeSelect()}"
                    app:selectedFormattedDate="@{taskViewModel.reminderDateTime}"
                    app:selectedFormattedTime="@{taskViewModel.reminderDateTime}" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={taskViewModel.isTaskRegular}"
                    android:text="@string/make_task_regular" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/urgencyGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:initialUrgency="@{taskViewModel.urgency}"
                    app:isEditEnabled="@{taskViewModel.isTaskDetailsEnabled()}"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/urgencyLow"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/urgencyMedium"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/urgencyHigh"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>